ingressK8s/appDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  namespace: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:latest
        command: ["sh", "-c", "mkdir -p /www && echo 'Hello from BusyBox!' > /www/index.html && httpd -f -p 5000 -h /www"]
        ports:
        - containerPort: 5000
