ingressK8s/appService.yml
apiVersion: v1
kind: Service
metadata:
  name: busybox-service
  namespace: ingress
spec:
  selector:
    app: busybox
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
