ingressK8s/nginxService.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: ingress
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
